syntax = "proto3";

package etcd;

message Service {
 string Id = 1;
 string Name = 2;
 string Namespace = 3;
 map<string,string> Version = 4;
 repeated
 Port Ports  = 5;
 bool MeshExternal = 6;
}

message Port {
 string Name = 1;
 uint32 Port = 2;
 string Protocol = 3;
}

message Node {
 string Id = 1;
 string Ip = 2;
 string Az = 3;
 map<string,string> Users = 4;
}

message Instance {
 string Id = 1;
 string ServiceId = 2;
 string ServiceVersion = 3;
 string NodeId = 4;
 Port Port  = 5;
 map<string,string> Labels = 6;
}

message Cluster {
 string Id = 1;
 string ServiceId = 2;
 map<string,string> InstanceIds = 3;
 map<string,string> Labels = 4;
}

















